// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <TextArea /> When initializes And uses hasFixedSize Then should match the snapshot 1`] = `
<div>
  <textarea
    class="input textarea has-fixed-size"
  />
</div>
`;

exports[`Given <TextArea /> When initializes And uses rows Then should match the snapshot 1`] = `
<div>
  <textarea
    class="input textarea"
    rows="10"
  />
</div>
`;

exports[`Given <TextArea /> When initializes Then should match the snapshot 1`] = `
<div>
  <textarea
    class="input textarea"
  />
</div>
`;
